crates/zendriver-mcp/tests/snapshots/schema_snapshots__download_out.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::download::DownloadOutput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: DownloadOutput
description: "Output of `browser_download`."
type: object
properties:
  filename:
    description: "Echoed target filename, when one was supplied."
    type:
      - string
      - "null"
  ok:
    description: "Always `true` — the fetch was dispatched. The download itself runs\nasynchronously in Chrome."
    type: boolean
  url:
    description: Echoed source URL.
    type: string
required:
  - ok
  - url
