crates/zendriver-mcp/tests/snapshots/schema_snapshots__find_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::find::FindInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: FindInput
description: "Input for `browser_find`."
type: object
properties:
  attrs:
    description: Attribute predicates (AND-ed). Predicate mode only.
    type: array
    items:
      $ref: "#/$defs/AttrPredicate"
  css:
    type:
      - string
      - "null"
  frame_id:
    type:
      - string
      - "null"
  nth:
    type:
      - integer
      - "null"
    format: uint
    minimum: 0
  role:
    type:
      - string
      - "null"
  role_name:
    type:
      - string
      - "null"
  tag:
    description: "HTML tag name filter (e.g. `\"button\"`, `\"a\"`). Predicate mode only."
    type:
      - string
      - "null"
  text:
    type:
      - string
      - "null"
  text_exact:
    type:
      - string
      - "null"
  text_regex:
    type:
      - string
      - "null"
  timeout_ms:
    type: integer
    format: uint64
    default: 5000
    minimum: 0
  visible_only:
    type: boolean
    default: true
  xpath:
    type:
      - string
      - "null"
additionalProperties: false
$defs:
  AttrOp:
    description: "Attribute-value comparison operator used in [`AttrPredicate`].\n\nDetermines how the actual element attribute value is compared against\nthe `value` field. When `op` is [`AttrOp::Has`], `value` is ignored."
    oneOf:
      - description: "`[name=\"value\"]` — exact match."
        type: string
        const: eq
      - description: "`[name*=\"value\"]` — contains substring."
        type: string
        const: contains
      - description: "`[name^=\"value\"]` — starts with."
        type: string
        const: starts_with
      - description: "`[name$=\"value\"]` — ends with."
        type: string
        const: ends_with
      - description: "`[name]` — attribute is present regardless of value."
        type: string
        const: has
      - description: JS regex test on the attribute value (post-filter).
        type: string
        const: regex
  AttrPredicate:
    description: "One attribute predicate in a predicate-mode [`Selector`].\n\nCombine multiple predicates via `attrs: [...]`; they are AND-ed.\n`value` is required for every `op` except [`AttrOp::Has`]."
    type: object
    properties:
      name:
        description: "Attribute name (e.g. `\"data-role\"`, `\"class\"`, `\"href\"`)."
        type: string
      op:
        description: Comparison operator.
        $ref: "#/$defs/AttrOp"
      value:
        description: "Comparison value. Required for all operators except `has`."
        type:
          - string
          - "null"
    additionalProperties: false
    required:
      - name
      - op
